--- a/latex/xdi.tex
+++ b/latex/xdi.tex
@@ -25,7 +25,7 @@
 \newcommand{\sltt}[1]{\texttt{\textsl{#1}}}
 \newcommand{\DAQ}{data acquisition}
 \newcommand{\DAN}{data analysis}
-\newcommand{\xdi}{\textsf{XDI}}
+\newcommand{\xdi}{\sltt{XDI}}
 \newcommand{\xdiversion}{1.0}
 
 \newcommand{\mcomm}[2]{\marginpar{\quad\includegraphics[width=1.0cm]{exclamation.jpg}\\%
@@ -74,7 +74,7 @@
   \Large
   XDI Working Group\\[2ex]
   \normalsize
-  Bruce Ravel (NIST) bravel\char64 bnl.gov\\
+  Bruce Ravel (NIST) \href{mailto:bravel@bnl.gov}{\texttt{bravel\char64 bnl.gov}}\\
   ...and...
 \end{center}
 
@@ -117,14 +117,14 @@ format to accomplish the following goals:
 \item Provide a mechanism for extracting and preserving a single
   XAS-like data set from a related experiment (for example, A DAFS
   measurement) or from a complex data structure (for example, a
-  database or a hierarchical data file used to store a multispectral
+  database or a hierarchical data file used to store a multi-spectral
   data set).
 \end{enumerate}
 
 This format is intended to encode single-scan data files with
 metadata.  It is not intended to encode relationships between many XAS
 measurements or between an XAS measurement and other parts of a
-multispectral experiment.
+multi-spectral experiment.
 
 In order to fulfill these goals, {\xdi} files provide a flexible,
 consistent representation of information common to all XAS
@@ -217,7 +217,7 @@ Sec.~\ref{sec:ixsif_fields_standard}.
 \end{description}
 
 
-\section{Definintion of the IXS Interchange Format}
+\section{Definition of the XAS Data Interchange Format}
 \label{sec:def_ixsif}
 
 This section of the {\xdi} specification formally describes the
@@ -285,7 +285,7 @@ file and is comprised of structured text.  Every line of the header
 \textbf{must} begin with a comment character and \textbf{must} end
 with an end-of-line sequence, both of which are defined below.  There
 are no multi-line headers.  Lines may be of any length.  Support for
-the Posix, Apple, or Microsoft end-of-line conventions is provided to
+the POSIX, Apple, or Microsoft end-of-line conventions is provided to
 increase cross-platform portability.
 
 \begin{verbatim}
@@ -329,7 +329,7 @@ interpreted as user comments.
 The \textbf{optional} status of the headers is to accommodate data
 files which contain obvious header lines but which are not compliant
 with this specification.  In that case, all header lines are
-interpretted as user comments.  Of course, in that case few of the
+interpreted as user comments.  Of course, in that case few of the
 advantages of the {\xdi} format are realized.
 
 The separator lines (\texttt{FIELD-END} and \texttt{HEADER-END}) serve
@@ -337,7 +337,7 @@ specific, syntactic purposes in the {\xdi} grammar.  The line of
 dashes is a common visual cue denoting the end of the headers and
 beginning of the data.  The \texttt{FIELD-END} serves to separate and
 distinguish field lines from freely-formatted user comments, which may
-resemble a header fields or other gramatical constructs.  Similarly,
+resemble a header fields or other grammatical constructs.  Similarly,
 the \texttt{HEADER-END} serves to distinguish column labels from user
 comments, which are otherwise grammatically identical elements of the
 data file.
@@ -359,7 +359,7 @@ format that do not affect compatibility with previous versions, as
 when new defined header fields are defined.  (A parser compliant with
 an earlier minor version would treat the newly defined header as an
 extension field.  Propagated to an output file as an extension field,
-this field would then be interpretted correctly by a more recent
+this field would then be interpreted correctly by a more recent
 parser.)  The \texttt{<major>} version is incremented when other
 changes are made to the format, as when the definition of the contents
 of a defined header field is altered.
@@ -389,9 +389,10 @@ digit.  ``XDI/1.12'' is a higher (more recent) version than
 This specification does not impose a restriction on how applications
 identify and version themselves.  However, a single application
 \textbf{must} identify and version itself using a single text sequence
-without white space.  Some acceptible examples follow.  The first
+without white space.  Some acceptable examples follow.  The first
 example shows an application which uses the same format as the XDI
-version rule; the second shows the names of the data acquisition and
+version rule, which is the \textbf{recommended} format for application
+versioning; the second shows the names of the data acquisition and
 data processing programs are specified by name but without version
 numbers; the third shows some arbitrary method of versioning an
 application.
@@ -411,8 +412,8 @@ application.
 The lines immediately following the version line of the header contain
 the fields of the header.  These fields are arranged in a manner
 similar to the the header of an Internet electronic mail message,
-although {\xdi} fields may not span multiple lines.  Each field
-consists of a case-insensitive name, a separating colon, and an
+although {\xdi} fields \textbf{shall not} span multiple lines.  Each
+field consists of a case-insensitive name, a separating colon, and an
 associated value.  When multiple occurrences of the same field are
 present the value of the last occurrence \textbf{must} be used as the
 value for the field.
@@ -423,7 +424,7 @@ for each of the defined fields are defined in
 section~\ref{sec:ixsif_fields_standard} and the complete definition of
 the \texttt{FIELDS} rule may be found in
 section~\ref{apdx:gram_hdr_fields}.  Although some defined fields take
-more specificly specified contant, the generic definition of a field
+more specifically specified content, the generic definition of a field
 looks like this:
 
 \begin{verbatim}
@@ -439,16 +440,18 @@ The header fields subsection is ended with a \texttt{FIELD-END} line.
 Note that because no fields are required to be present, this
 subsection may contain no lines. The dividing line \textbf{must} be
 present if any header lines are present but \textbf{may} be absent if
-no header lines are present.  Also note that because
-\texttt{FIELD-VALUE} matches zero or more \texttt{WORD} terminals, it
-is not required to contain any text.
+no header lines are present.  If a field is present, it
+\textbf{should} also contain a value.
+%Also note that because
+%\texttt{FIELD-VALUE} matches zero or more \texttt{WORD} terminals, it
+%is not required to contain any text.
 
 \subsubsection{User Comments}
 \label{sec:def_hdr_comments}
 
 Following the dividing line at the end of the header fields subsection
 is the area of the header that contains user comments. Please note
-that this area is reserved for comments supplied by the experimenters
+that this area is reserved for comments supplied by the experimenter
 and \textbf{must not} be used by software as a place to store other
 information.  Refer to section~\ref{sec:ixsif_fields_extension} for
 information about using extension fields for this purpose.
@@ -465,7 +468,7 @@ with a dividing line.  When extracting the comment subsection from an
 and any trailing white space from each comment line but \textbf{must
   not} further alter the line's contents.
 
-Applications \textbf{must} preserve all comment fields.
+Applications \textbf{must} preserve all user comment.
 
 \subsubsection{Column Labels}
 \label{sec:def_hdr_labels}
@@ -482,6 +485,12 @@ of data present in the data section.
 
 The number of column labels \textbf{must} equal the number of columns
 of data in the data section.
+
+Note that each column label \textbf{must} be a word and that white
+space delimits the labels.  For specific column labels which, in
+natural language, would consist of two or more words, the use of
+\href{http://en.wikipedia.org/wiki/Camel_case}{CamelCase} or
+underscores is \textbf{recommended}.
 
 \subsection{Data Section}
 \label{sec:def_data}
@@ -500,10 +509,10 @@ column to energy.\mcomm{Floats}{anchor:floats}
         DATA           = *DATA-LINE
 \end{verbatim}
 
-Note that blank lines in this section \textbf{must} be discarded; the
-number of columns \textbf{must} be the same for all lines that contain
-data; and any measurements of times present \textbf{must} be
-represented as floating point numbers.
+Blank lines in this section \textbf{must} be discarded.  The number of
+columns \textbf{must} be the same for all lines that contain data.
+Any measurements of times present \textbf{must} be represented as
+floating point numbers.
 
 
 \section{XDI Fields}
@@ -545,7 +554,7 @@ The location where the experiment was performed.
 \end{verbatim}
 \end{HeaderField}
 
-\begin{HeaderField}{Collimation}{<text>}{fixed-angle, Rh-coated torroid}
+\begin{HeaderField}{Collimation}{<text>}{fixed-angle, Rh-coated toroid}
 A brief description of the collimating mirrors used at the beamline.
 \begin{verbatim}
         COLLIMATION    = "#" "Collimation"  ": "  *WORD  EOL
@@ -564,7 +573,7 @@ A brief description of the collimating mirrors used at the beamline.
 \end{HeaderField}
 
 \begin{HeaderField}{D\_spacing}{<float>}{3.13555}
-The interplaner spacing of the monochromator's crystals, in {\AA}ngstroms.
+The inter-planer spacing of the monochromator's crystals, in {\AA}ngstroms.
 \begin{verbatim}
         DSPACING       = "#"  "D_spacing"  ": "  FLOAT  EOL
 \end{verbatim}
@@ -572,7 +581,7 @@ The interplaner spacing of the monochromator's crystals, in {\AA}ngstroms.
 
 \begin{HeaderField}{Edge\_energy}{<float>}{5465}
   The energy reference of the scan -- often the zero-valent edge
-  energy of the absoring atom -- as defined in the data acquisition
+  energy of the absorbing atom -- as defined in the data acquisition
   software, in electron volts.\mcomm{Energy units}{anchor:units}
 \begin{verbatim}
         EDGEENERGY     = "#"  "Edge_energy"  ": "  FLOAT  EOL
@@ -582,7 +591,7 @@ The interplaner spacing of the monochromator's crystals, in {\AA}ngstroms.
 \begin{HeaderField}{End\_time}{<timestamp>}{2003-04-01T13:01:02}
   The date and time that this scan ended, using the timestamp format
   specified in ISO 8601\footnote{ISO 8601, \textit{
-      Representation of dates and times} is explained succintly at\\
+      Representation of dates and times} is explained succinctly at\\
     \href{http://www.iso.org/iso/support/faqs/faqs_widely_used_standards/widely_used_standards_other/date_and_time_format.htm}{http://www.iso.org/iso/support/faqs/faqs\_widely\_used\_standards/widely\_used\_standards\_other/date\_and\_time\_format.htm}}.
   The example above represents one minute and two seconds after one
   o'clock in the afternoon of April 1$^{\mathrm{st}}$,
@@ -593,7 +602,7 @@ The interplaner spacing of the monochromator's crystals, in {\AA}ngstroms.
 \end{verbatim}
 \end{HeaderField}
 
-\begin{HeaderField}{Focusing}{<text>}{sagitally bent second crystal}
+\begin{HeaderField}{Focusing}{<text>}{saggitally bent second crystal}
 A brief description of the focusing optics used in the experiment.
 \begin{verbatim}
         FOCUSING       = "#"  "Focusing"  ": "  *WORD  EOL
@@ -649,7 +658,7 @@ The current of the synchrotron's storage ring, in milliamperes.
 \begin{HeaderField}{Start\_time}{<timestamp>}{2003-04-01T13:01:02}
   The date and time that this scan started, using the timestamp format
   specified in ISO 8601\footnote{ISO 8601, \textit{
-      Representation of dates and times} is explained succintly at\\
+      Representation of dates and times} is explained succinctly at\\
     \href{http://www.iso.org/iso/support/faqs/faqs_widely_used_standards/widely_used_standards_other/date_and_time_format.htm}{http://www.iso.org/iso/support/faqs/faqs\_widely\_used\_standards/widely\_used\_standards\_other/date\_and\_time\_format.htm}}.
   The example above represents one minute and two seconds after one
   o'clock in the afternoon of April 1$^{\mathrm{st}}$, 2003.\mcomm{Time zones}{anchor:timezones}
@@ -761,7 +770,7 @@ order.
 \item[Abscissa:] The \texttt{MATH} rule should include a way of
   specifying a function converting wavelength to energy, something
   like \texttt{k2e(\$1)}.  Also need to recognize \texttt{sin()}, as
-  shown in the explanation of the \texttt{ABSCISS}
+  shown in the explanation of the \texttt{ABSCISSA}
   field.\label{anchor:math}
 \item[Math rule:] The math expression language for providing hints for
   converting columns in useful spectra needs a more complete
@@ -774,7 +783,7 @@ order.
   single scan files of several other types of spectroscopy, including
   XES, NIXS, DAFS, and ReffleXAFS.  Supporting these types would
   require definition of new defined headers.  Headers similar to
-  \texttt{Mu\_tranmission} (i.e.\ headers which take \texttt{MATH}
+  \texttt{Mu\_transmission} (i.e.\ headers which take \texttt{MATH}
   rules) could simultaneously identify the spectroscopy type and
   provide the appropriate hint for constructing a spectrum from the
   columns.
@@ -805,9 +814,6 @@ order.
   column labels, and extension fields are handled correctly anywhere
   in the world.  Internationalization of defined headers will require
   proper handling of unicode.\label{anchor:unicode}
-\item[Time zones:] Do we need a header defining time zone for complete
-  interpretation of timestamps? Or is the source header sufficient for
-  determining location of the measurement?\label{anchor:timezones}
 \item[Floating point numbers:] Does the type for the data need to be
   defined, i.e.\ single or double precision or
   otherwise?\label{anchor:floats}
@@ -820,11 +826,14 @@ order.
   throughout the scan.  What value should be recorded in the file?
   The current at the beginning of the scan?  At the end?  Something
   else (say, the average throughout the scan)?\label{anchor:current}
+\item[Time zones:] Do we need a header defining time zone for complete
+  interpretation of timestamps? Or is the source header sufficient for
+  determining location of the measurement?\label{anchor:timezones}
 \item[Case sensitivity:] RFC 5234 specifies case insensitivity for all
   rules.  This specification uses capitalized words for defined
-  headers.  This is permissable by RFC 5234, so long as they are
+  headers.  This is permissible by RFC 5234, so long as they are
   specified as explicit strings.  Should defined fields be
-  case-insentive?
+  case-insensitive?
 \item[Target programming languages:] A minimal set of languages for
   which {\xdi} support \textbf{should} be provided to assist in its
   wide-spread adoption includes: C, C++, Fortran, Java, Python, Perl,
