--- a/doc/Poster_XAFS15/beamerthemeXDI.sty
+++ b/doc/Poster_XAFS15/beamerthemeXDI.sty
@@ -138,12 +138,12 @@
 
 % adapt height of itemize rectangles
 \setbeamertemplate{itemize items}[triangle]
-\setbeamertemplate{itemize item}{\raisebox{0.12ex}{$\blacktriangleright$}\hskip0.1em}
-\setbeamertemplate{itemize subitem}{\raisebox{0.12ex}{$\triangleright$}\hskip0.1em}
+\setbeamertemplate{itemize item}{\raisebox{0.12ex}{\hskip5.0em$\blacktriangleright$}\hskip0.2em}
+\setbeamertemplate{itemize subitem}{\raisebox{0.12ex}{$\triangleright$}\hskip0.2em}
 % or define your own template using \defbeamertemplate{itemize item}, see beameruserguide.pdf
 
 % equal font sizes for all levels
-\setbeamerfont{itemize/enumerate body}{size=\footnotesize}
-\setbeamerfont{itemize/enumerate subbody}{size=\footnotesize}
-\setbeamerfont{itemize/enumerate subsubbody}{size=\footnotesize}
+\setbeamerfont{itemize/enumerate body}{size=\scriptsize}
+\setbeamerfont{itemize/enumerate subbody}{size=\tiny}
+\setbeamerfont{itemize/enumerate subsubbody}{size=\tiny}
 
